# new-robot-module

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  NewRobotModule.h  NewRobotModule.in.cpp
tests/: CMakeLists.txt  loader.in.cpp
yaml/: CMakeLists.txt  NewRobotModuleYAML.in.yaml
yaml/alias/: NewRobotModuleYAML.in.yaml
