if(TARGET NewRobotModule)
  set(ROBOT_MODULE_PATH "$<TARGET_FILE_DIR:NewRobotModule>")
  set(ROBOT_MODULE_PARAMS "\"NewRobotModule\"")
  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/loader.in.cpp" "${CMAKE_CURRENT_BINARY_DIR}/loader.cmake.cpp")
  file(GENERATE OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/loader.cpp" INPUT "${CMAKE_CURRENT_BINARY_DIR}/loader.cmake.cpp")
  add_executable(loader_NewRobotModule "${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/loader.cpp")
  target_link_libraries(loader_NewRobotModule PUBLIC mc_rtc::mc_rbdyn)
  add_test(loader_NewRobotModule loader_NewRobotModule)
endif()
