if(TARGET NewRobotModule)
  set(ROBOT_MODULE_PARAMS "\"NewRobotModule\"")
  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/loader.in.cpp" "${CMAKE_CURRENT_BINARY_DIR}/loader.cpp")
  add_executable(loader_NewRobotModule "${CMAKE_CURRENT_BINARY_DIR}/loader.cpp")
  target_link_libraries(loader_NewRobotModule PUBLIC mc_rtc::mc_rbdyn)
  add_test(NAME loader_NewRobotModule COMMAND loader_NewRobotModule "$<TARGET_FILE_DIR:NewRobotModule>")
endif()
